mockiato_codegen/tests/ui/non-method-items.stderr
error: Traits are currently only allowed to contain traits
 --> $DIR/non-method-items.rs:9:5
  |
9 |     const BAR: usize;
  |     ^^^^^

error: Traits are currently only allowed to contain traits
  --> $DIR/non-method-items.rs:11:5
   |
11 |     type Baz;
   |     ^^^^

error: Traits are currently only allowed to contain traits
  --> $DIR/non-method-items.rs:13:5
   |
13 |     macro_in_trait!();
   |     ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

